Read allowed cors origin from configuration instead of hard coding